Trying to fix spacing with this rubbish grid

--- a/public/css/backend/app.css
+++ b/public/css/backend/app.css
@@ -12303,7 +12303,8 @@ _:-ms-input-placeholder, :root .mdl-slider.mdl-slider.is-upgraded {
  * Used within the dashboard
  */
 .info-card-wide.mdl-card {
-  width: 100%; }
+  width: 90%;
+  margin: auto; }
 
 .info-card-wide > .mdl-card__title {
   color: #fff;
