--- a/resources/assets/sass/backend/components/_cards.scss
+++ b/resources/assets/sass/backend/components/_cards.scss
@@ -57,7 +57,8 @@
  */
 
 .info-card-wide.mdl-card {
-    width: 100%;
+    width: 90%;
+    margin: auto;
 }
 .info-card-wide > .mdl-card__title {
     color: #fff;
